Mobile friendly design + addition of  in-page hyperlinks
Hiding/showing elements on mobile devices, text size changes. Hyperlinks to all horoscopes on mobile only due to endless scrolling.

--- a/react-horoscope-v2/src/styling/App.css
+++ b/react-horoscope-v2/src/styling/App.css
@@ -6,6 +6,7 @@
   --background-color: rgb(124, 149, 149);
   --off-white: #f4eff5;
   --soft-black: rgba(26, 23, 31, 0.848);
+  --hyperlink-blue: #1264e097;
 }
 
 button {
@@ -35,6 +36,13 @@ h1 {
   font-weight: 900;
 }
 
+ul {
+  display: inline-flex;
+  margin: 2px;
+  padding: 0;
+  list-style: none;
+}
+
 .App {
   text-align: center;
   background-color: var(--main-color);
@@ -53,7 +61,7 @@ h1 {
 }
 
 .grid-img {
-  max-width: 200px;
+  max-width: 75%;
 }
 
 .grid-text {
@@ -89,10 +97,6 @@ h1 {
   font-size: 12px;
 }
 
-.img-thumbnail {
-  background-color: none;
-}
-
 .page-title {
   font-size: 45px;
   padding-bottom: 20px;
@@ -122,6 +126,13 @@ h1 {
   }
 }
 
+@media (min-width: 431px) {
+  .top-page,
+  .mobile-shortcuts {
+    display: none;
+  }
+}
+
 @media (max-width: 500px) {
   .horoscope-desription-carousel {
     font-size: 8px;
@@ -131,5 +142,25 @@ h1 {
 @media (max-width: 430px) {
   .carousel-hide {
     display: none;
+  }
+
+  .mobile-shortcuts-link {
+    text-decoration: none;
+    text-transform: capitalize;
+    background-color: var(--secondary-color);
+    color: var(--soft-black);
+  }
+
+  .top-page {
+    text-align: right;
+  }
+
+  .top-page-link {
+    color: var(--hyperlink-blue);
+    background-color: var(--secondary-color);
+  }
+
+  .mobile-shortcuts-link:hover {
+    color: var(--off-white);
   }
 }
