--- a/react-horoscope-v2/src/styling/App.css
+++ b/react-horoscope-v2/src/styling/App.css
@@ -6,23 +6,13 @@
   --background-color: rgb(124, 149, 149);
   --off-white: #f4eff5;
   --soft-black: rgba(26, 23, 31, 0.848);
-  --hyperlink-blue: #1264e097;
+  --hyperlink-blue: #124ba0cd;
+  --footlink-blue: #0e459997;
 }
 
 button {
-  padding: 10px 20px;
-  margin: 5px;
   border: var(--secondary-color);
-  border-width: 1px solid;
-  border-radius: 5px;
   background-color: var(--tertiary-color);
-  font-size: 16px;
-}
-
-button:hover {
-  color: var(--off-white);
-  font-weight: bold;
-  background-color: var(--secondary-color);
 }
 
 footer,
@@ -36,6 +26,16 @@ h1 {
   font-weight: 900;
 }
 
+hr {
+  color: var(--background-color);
+  border-width: 10px;
+  opacity: 100%;
+}
+
+img {
+  opacity: 70%;
+}
+
 ul {
   display: inline-flex;
   margin: 2px;
@@ -47,7 +47,7 @@ ul {
   text-align: center;
   background-color: var(--main-color);
   margin: auto;
-  max-width: 1000px;
+  max-width: 900px;
 }
 
 .App-logo {
@@ -60,8 +60,43 @@ ul {
   color: var(--off-white);
 }
 
+.carousel-slides,
+.grid-text {
+  margin: 50px 0;
+}
+
+.day-button {
+  padding: 10px 20px;
+  margin: 5px;
+  border: var(--secondary-color);
+  border-width: 1px solid;
+  border-radius: 5px;
+  background-color: var(--tertiary-color);
+  font-size: 16px;
+}
+
+.day-button:hover {
+  color: var(--off-white);
+  font-weight: bold;
+  background-color: var(--secondary-color);
+}
+
+.footer-SO-link {
+  font-weight: 600;
+}
+
+.footlink {
+  color: var(--footlink-blue);
+  text-decoration: none;
+}
+
+.footer-SO-link:hover,
+.footlink:hover {
+  text-decoration: underline;
+}
+
 .grid-img {
-  max-width: 75%;
+  max-height: 200px;
 }
 
 .grid-text {
@@ -77,7 +112,7 @@ ul {
 .horoscope-title-grid,
 .horoscope-title-carousel {
   font-weight: 900;
-  font-size: 24px;
+  font-size: 20px;
   margin: 0;
   padding: 0;
 }
@@ -85,29 +120,44 @@ ul {
 .horocope-dates-carousel,
 .horoscope-dates-grid {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 14px;
   font-style: italic;
 }
 
-.horoscope-text {
-  font-size: 14px;
+.horoscope-description-carousel {
+  font-size: 15px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.horoscope-description-grid {
+  font-size: 13px;
+  text-align: start;
 }
 
 .hover-text {
   font-size: 12px;
+  text-transform: capitalize;
+}
+
+.img-carousel {
+  max-width: 400px;
 }
 
 .page-title {
   font-size: 45px;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
 }
 
-.user-date {
+.user-date,
+.user-date-carousel {
   text-decoration: underline;
+  font-size: 14px;
 }
 
-.user-date-main,
-.user-date {
+.user-date,
+.user-date-carousel,
+.user-date-main {
   font-weight: 900;
 }
 
@@ -126,22 +176,48 @@ ul {
   }
 }
 
-@media (min-width: 431px) {
+@media (min-width: 576px) {
   .top-page,
   .mobile-shortcuts {
     display: none;
   }
 }
 
-@media (max-width: 500px) {
-  .horoscope-desription-carousel {
-    font-size: 8px;
+@media (max-width: 576px) {
+  .carousel-slides,
+  .grid-text {
+    margin-top: 10px;
+    margin-bottom: 0px;
   }
-}
 
-@media (max-width: 430px) {
-  .carousel-hide {
-    display: none;
+  .page-title {
+    font-size: 30px;
+  }
+
+  .day-button {
+    padding: 10px 20px;
+    font-size: 12px;
+  }
+
+  .horoscope-description-carousel {
+    font-size: 8px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .horoscope-description-grid {
+    text-align: center;
+  }
+
+  .horoscope-title-carousel,
+  .horoscope-title-dates {
+    font-size: 18px;
+  }
+
+  .img-carousel {
+    max-width: 75%;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 
   .mobile-shortcuts-link {
@@ -151,16 +227,27 @@ ul {
     color: var(--soft-black);
   }
 
-  .top-page {
-    text-align: right;
+  .user-date-carousel {
+    display: none;
   }
+}
 
+@media (max-width: 430px) {
   .top-page-link {
     color: var(--hyperlink-blue);
+    font-weight: 600;
     background-color: var(--secondary-color);
+    padding: 0 10px;
   }
 
   .mobile-shortcuts-link:hover {
     color: var(--off-white);
+  }
+}
+
+@media (max-width: 330px) {
+  .img-carousel {
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
 }
